--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
+  geolocator: ^5.3.2+2
+  google_maps_flutter: ^0.5.30
   permission_handler: ^5.0.1+1
   flutter_compass: ^0.4.3
   location: ^3.0.2
